element ui 使用环境搭建

--- a/testElementUi/new_file.html
+++ b/testElementUi/new_file.html
@@ -7,10 +7,24 @@
 </head>
 <body>
   <div id="app">
-    <el-button @click="visible = true">Button</el-button>
-    <el-dialog :visible.sync="visible" title="Hello world">
-      <p>Try Element</p>
-    </el-dialog>
+    <div class="block">
+      <el-button @click="visible = true">Button</el-button>
+      <el-dialog :visible.sync="visible" title="Hello world">
+        <p>Try Element</p>
+      </el-dialog>
+    </div>
+    <div class="block">
+      <span class="demonstration">完整功能</span>
+      <el-pagination
+              @size-change="handleSizeChange"
+              @current-change="handleCurrentChange"
+              :current-page="currentPage4"
+              :page-sizes="[100, 200, 300, 400]"
+              :page-size="100"
+              layout="total, sizes, prev, pager, next, jumper"
+              :total="400">
+      </el-pagination>
+    </div>
   </div>
 </body>
   <!-- import Vue before Element -->
